fix spacing

--- a/app/scss/footer.scss
+++ b/app/scss/footer.scss
@@ -1,5 +1,17 @@
+@import "mixin";
+
 .footer{
+  color: lightgrey;
+  border-top: solid 1px var(--mainColor);
+  text-align:left;
   width: 100%;
-  height:20vh;
-  background-color: var(--mainColor);
+  padding: 10px 5vw;
+  p{
+    font-size: 16px;
+    line-height: 18px;
+  }
+  
+  @include media(max-xs){
+    padding: 5px 20px;
+  }
 }
